--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "chronometre": {
+    "todotime": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/chronometre",
+            "outputPath": "dist/todotime",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "chronometre:build"
+            "browserTarget": "todotime:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "chronometre:build:production"
+              "browserTarget": "todotime:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "chronometre:build"
+            "browserTarget": "todotime:build"
           }
         },
         "test": {
@@ -116,16 +116,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "chronometre:serve"
+            "devServerTarget": "todotime:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "chronometre:serve:production"
+              "devServerTarget": "todotime:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "chronometre"
+  "defaultProject": "todotime"
 }
