--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "firebase-admin": "^8.10.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.1",
+    "randomcolor": "^0.5.4",
     "rxjs": "~6.5.4",
     "tslib": "^1.11.1",
     "zone.js": "~0.10.2"
